fixed z-index of headline (collided with switch) (fixes #78) [deploy]

--- a/frontend/public/css/shared.css
+++ b/frontend/public/css/shared.css
@@ -173,6 +173,7 @@ button:hover svg path {
 	/* border-bottom-right-radius: 30px;
 	border-bottom-left-radius: 30px; */
 	border: 5px solid var(--bg-color);
+	z-index: 1;
 }
 
 .cropperArea {
